--- a/android/app/src/main/res/layout/activity_login.xml
+++ b/android/app/src/main/res/layout/activity_login.xml
@@ -79,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
-                android:textColor="@color/text_primary"
+                android:textColor="@color/text_dark_gray"
                 android:textColorHint="@color/text_secondary" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -105,7 +105,7 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:textColor="@color/text_primary"
+                android:textColor="@color/text_dark_gray"
                 android:textColorHint="@color/text_secondary" />
 
         </com.google.android.material.textfield.TextInputLayout>
